--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
 	"name": "rogertm/mce",
-	"description": "Twenty'em Child Theme",
+	"description": "MCE - Movimiento Cubano de Excursionismo",
 	"keywords": ["wordpress", "framework", "child-theme", "theme-framework", "theme-development", "wordpress-framework"],
 	"homepage": "https://github.com/rogertm/mce",
 	"license": "GPL-2.0-or-later",
